--- a/SteamUpdateProject/SteamUpdateDiscordBot.csproj
+++ b/SteamUpdateProject/SteamUpdateDiscordBot.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>SteamUpdateProject</AssemblyName>
     <NoWin32Manifest>true</NoWin32Manifest>
     <RootNamespace>SteamUpdateProject</RootNamespace>
