--- a/SteamUpdateProject/SteamUpdateDiscordBot.csproj
+++ b/SteamUpdateProject/SteamUpdateDiscordBot.csproj
@@ -15,6 +15,6 @@
     <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="5.0.6" />
     <PackageReference Include="Microsoft.SqlServer.SqlManagementObjects" Version="161.46367.54" />
-    <PackageReference Include="SteamKit2" Version="2.3.0" />
+    <PackageReference Include="SteamKit2" Version="2.4.0-Alpha.2" />
   </ItemGroup>
 </Project>
